bugfixes and pipeline component

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,3 +11,4 @@
 @import 'components/topcontactinfo';
 @import 'components/sidebar';
 @import 'components/dashboard';
+@import 'components/pipeline';
