--- a/resources/assets/sass/components/notifications.scss
+++ b/resources/assets/sass/components/notifications.scss
@@ -1,13 +1,9 @@
 //Notifications
 .dropdown {
-    display:inline-block;
+    display:block;
     padding:20px 120px 0px 0px;
     float:right;
     z-index: 10;
-  }
-.glyphicon-bell {
-    font-size:1.4rem;
-    color:#eee;
   }
 
 .menu {
