updates to pipline view and migrations

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8435,8 +8435,8 @@ body {
 }
 
 .btn-primary {
-  background-color: #424242;
-  border-color: #424242;
+  background-color: #535353;
+  border-color: #535353;
 }
 
 .dropzone {
@@ -8512,7 +8512,7 @@ body {
   position: fixed;
   width: 400px;
   z-index: 11;
-  background-color: #424242;
+  background-color: #535353;
   -webkit-transition: .2s;
   transition: .2s;
 }
@@ -8598,7 +8598,7 @@ body {
 }
 
 .navmenu {
-  background-color: #424242;
+  background-color: #535353;
   top: 0;
   width: 270px;
   margin: 0;
@@ -8617,7 +8617,7 @@ body {
 }
 
 .list-group-item {
-  background-color: #424242;
+  background-color: #535353;
   border: none;
 }
 
@@ -8660,7 +8660,7 @@ body {
 }
 
 .childlist {
-  background-color: #424242;
+  background-color: #535353;
   padding-left: 50px;
 }
 
@@ -9134,7 +9134,16 @@ ul.drag-inner-list {
 .drag-item.is-moving {
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(229, 229, 229, 0.8);
+}
+
+.name {
+  color: #535353;
+}
+
+.org,
+.state {
+  color: #5f5f5f;
 }
 
 .drag-header-more {
