--- a/resources/assets/sass/components/base.scss
+++ b/resources/assets/sass/components/base.scss
@@ -1,5 +1,6 @@
-$primary-color: #424242;
+$primary-color: #535353;
 $darker-primary-color: #3A3A3A;
+$lighter-primary-color: #5f5f5f;
 $secondary-color: #008ae6;
 $link-color:#337ab7;
 $top-bar-color:#2196F3;
