--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8350,21 +8350,8 @@ button.close {
   }
 }
 
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-p {
-  margin: 0 0 10px;
-  line-height: 1.4285em;
-}
-
-p:last-child {
-  margin-bottom: 10px;
+body {
+  background-color: #edf0fd;
 }
 
 h1 {
@@ -8384,8 +8371,25 @@ h4 {
   font-weight: normal;
 }
 
-body {
-  background-color: #edf0fd;
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+p {
+  margin: 0 0 10px;
+  line-height: 1.4285em;
+}
+
+p:last-child {
+  margin-bottom: 10px;
+}
+
+.logo path {
+  fill: #008ae6;
 }
 
 .smalltext {
@@ -8401,7 +8405,7 @@ body {
 }
 
 .topbar {
-  background-color: #313d4e;
+  background-color: #5f5f5f;
   width: 100%;
   height: 40px;
 }
@@ -8426,7 +8430,7 @@ body {
 
 .taskcase {
   padding: 5px 5px 15px 20px;
-  background-color: #cce5ff;
+  background-color: #008ae6;
 }
 
 .taskcase hr {
@@ -8471,7 +8475,7 @@ body {
 
 .panel-header {
   color: #fff !important;
-  background-color: #3A485C !important;
+  background-color: #008ae6;
 }
 
 .panel-heading {
