--- a/resources/assets/sass/components/base.scss
+++ b/resources/assets/sass/components/base.scss
@@ -4,19 +4,9 @@ $lighter-primary-color: #5f5f5f;
 $secondary-color: #008ae6;
 $link-color:#337ab7;
 $top-bar-color:#2196F3;
-a{
-    // color: $link-color;
-    text-decoration: none;
-    &:hover {
-        text-decoration: none;
-    }
-}
-p{
-    margin: 0 0 10px;
-    line-height: 1.4285em;
-    &:last-child{
-    margin-bottom: 10px;
-    }
+
+body {
+    background-color: #edf0fd;
 }
 h1
 {
@@ -36,10 +26,25 @@ h4{
     font-weight: normal;
 }
 
-body {
-  background-color: #edf0fd;
-
+a{
+    // color: $link-color;
+    text-decoration: none;
+    &:hover {
+        text-decoration: none;
+    }
 }
+p{
+    margin: 0 0 10px;
+    line-height: 1.4285em;
+    &:last-child{
+    margin-bottom: 10px;
+    }
+}
+
+.logo path {
+    fill: $secondary-color;
+}
+
 .smalltext
 {
     font-size: 10px;
@@ -57,7 +62,7 @@ body {
 
 .topbar
 {
-     background-color: #313d4e;
+     background-color: $lighter-primary-color;
      width: 100%;
      height: 40px;
 
@@ -83,7 +88,7 @@ body {
 .taskcase
 {
     padding: 5px 5px 15px 20px;
-    background-color: #cce5ff;
+    background-color: $secondary-color;
 
 	hr
 	{
@@ -95,8 +100,8 @@ body {
 
 .btn-primary
 {
-	background-color: $primary-color; //#D18551 Ornage
-	border-color: $primary-color; // #D18551 Ornage
+	background-color: $primary-color; 
+	border-color: $primary-color;
 }
 
 .dropzone
@@ -132,7 +137,7 @@ body {
 .panel-header
 {
     color:#fff !important;
-    background-color:#3A485C !important;
+    background-color:$secondary-color;
 }
 
 .panel-heading
