--- a/resources/assets/sass/components/pipeline.scss
+++ b/resources/assets/sass/components/pipeline.scss
@@ -1,39 +1,36 @@
 $ease-out: all .3s cubic-bezier(0.23, 1, 0.32, 1);
 
-ul.drag-list, ul.drag-inner-list {
+#add-recruit {
+    margin-top: 10px;
+}
+
+.pipeline {
+   margin-top: 0.5em;
+   overflow-x: scroll;
+   overflow-y: hidden;
+
+    h3 {
+        font-size: 1em;
+    }
+    
+
+
+.drag-list, .drag-inner-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
-
-.mini-profile {
-    height: 16px;
-    margin: 2px 8px 0 0;
-    border-radius: 50%;
-    border: none;
-    vertical-align: top;
-}
-
-.drag-list {
-    display: flex;
-    align-items: flex-start;
-
-    @media (max-width: 690px) {
-        display: block;
-    }
+.drag-list { 
+     white-space: nowrap;
 }
 
 .drag-column {
-    flex: 1;
-    margin: 0 10px;
-    position: relative;
-    background: rgb(247, 247, 247);
-    overflow: hidden;
-
-    @media (max-width: 690px) {
-        margin-bottom: 30px;
-    }
+    margin: 0 7px;
+    background:  #ccc;
+    display: inline-block;
+    width: 270px;
+    padding-bottom: 1em;
 
     .stage-name {
         font-weight: 600;
@@ -47,28 +44,31 @@ ul.drag-list, ul.drag-inner-list {
 }
 
 .drag-column-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  
     padding: 6px 25px 6px 12px;
-    background-color: #f7f7f7;
-    background: url('/images/stage-arrow.png') no-repeat 100% 0,linear-gradient(#fff, #f7f7f7);
     background-size: 20px 100%, 100% 100%;
-    overflow: visible;
-    vertical-align: middle;
+ 
 }
 
 .drag-inner-list {
     min-height: 50px;
+    height: 78vh;
     color: #333;
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin: 0 4px;
+    padding: 0 4px;
 }
 
 .drag-item {
     padding: 1em;
-    min-height: 50px;
-    border-bottom: 1px solid#e5e5e5;;
+    min-height: 30px;
+    border-bottom: 1px solid#ccc;
+    margin-bottom: 5px;
     background-color: #fff;
     transition: $ease-out;
+    position: relative;
+    display: block;
 
     &.is-moving {
         transform: scale(1.5);
@@ -76,6 +76,17 @@ ul.drag-list, ul.drag-inner-list {
     }
 
 }
+
+}
+
+
+.mini-avatar {
+    height: 16px;
+    margin: 0 2px 0 0;
+    border-radius: 50%;
+    float: left;
+}
+
 
 .name {
     color: $primary-color;
@@ -89,38 +100,38 @@ ul.drag-list, ul.drag-inner-list {
     cursor: pointer;
 }
 
-.drag-options {
-    position: absolute;
-    top: 44px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    transform: translateX(100%);
-    opacity: 0;
-    transition: $ease-out;
+// .drag-options {
+//     position: absolute;
+//     top: 44px;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     padding: 10px;
+//     transform: translateX(100%);
+//     opacity: 0;
+//     transition: $ease-out;
 
-    &.active {
-        transform: translateX(0);
-        opacity: 1;
-    }
+//     &.active {
+//         transform: translateX(0);
+//         opacity: 1;
+//     }
 
-    &-label {
-        display: block;
-        margin: 0 0 5px 0;
+//     &-label {
+//         display: block;
+//         margin: 0 0 5px 0;
 
-        input {
-            opacity: 0.6;
-        }
+//         input {
+//             opacity: 0.6;
+//         }
 
-        span {
-            display: inline-block;
-            font-size: 0.9rem;
-            font-weight: 400;
-            margin-left: 5px;
-        }
-    }
-}
+//         span {
+//             display: inline-block;
+//             font-size: 0.9rem;
+//             font-weight: 400;
+//             margin-left: 5px;
+//         }
+//     }
+// }
 
 /* Dragula CSS  */
 
