--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9108,7 +9108,7 @@ a.list-group-item:hover {
   background-size: 20px 100%, 100% 100%;
 }
 
-.pipeline .drag-inner-list {
+.pipeline .list-group {
   min-height: 50px;
   height: 75vh;
   color: #333;
@@ -9147,7 +9147,7 @@ a.list-group-item:hover {
   color: #535353;
 }
 
-.org,
+.location,
 .state {
   color: #5f5f5f;
 }
