--- a/resources/assets/sass/components/pipeline.scss
+++ b/resources/assets/sass/components/pipeline.scss
@@ -50,7 +50,7 @@ $ease-out: all .3s cubic-bezier(0.23, 1, 0.32, 1);
  
 }
 
-.drag-inner-list {
+.list-group {
     min-height: 50px;
     height: 75vh;
     color: #333;
@@ -92,7 +92,7 @@ $ease-out: all .3s cubic-bezier(0.23, 1, 0.32, 1);
     color: $primary-color;
 }
 
-.org, .state {
+.location, .state {
     color: $lighter-primary-color;
 }
 
@@ -100,38 +100,6 @@ $ease-out: all .3s cubic-bezier(0.23, 1, 0.32, 1);
     cursor: pointer;
 }
 
-// .drag-options {
-//     position: absolute;
-//     top: 44px;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     padding: 10px;
-//     transform: translateX(100%);
-//     opacity: 0;
-//     transition: $ease-out;
-
-//     &.active {
-//         transform: translateX(0);
-//         opacity: 1;
-//     }
-
-//     &-label {
-//         display: block;
-//         margin: 0 0 5px 0;
-
-//         input {
-//             opacity: 0.6;
-//         }
-
-//         span {
-//             display: inline-block;
-//             font-size: 0.9rem;
-//             font-weight: 400;
-//             margin-left: 5px;
-//         }
-//     }
-// }
 
 /* Dragula CSS  */
 
