added college_id to user seeding

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,6 @@
 @import 'components/base';
 @import 'components/notifications';
 @import 'components/topcontactinfo';
-@import 'components/sidebar';
-@import 'components/dashboard';
+// @import 'components/sidebar';
+// @import 'components/dashboard';
 @import 'components/pipeline';
